src/css/tabs/cli.css
.tab-cli {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.tab-cli .content_wrapper {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.tab-cli p {
    padding: 0px;
    border-bottom: 1px solid var(--subtleAccent);
    flex-shrink: 0;
}

.tab-cli .note {
    margin-bottom: 20px;
    flex-shrink: 0;
}

.tab-cli .backdrop {
    border-bottom: 1px solid var(--subtleAccent);
    background-color: rgba(0, 0, 0, 0.75);
    margin-top: 0px;
    flex: 1;
    min-height: 100px;
    border-radius: 5px;
    box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.80);
    width: 100%;
    position: relative;
    overflow: hidden;
}

.tab-cli .backdrop::before {
    content: "";
    background-image: url("../../images/emu_logo_transparent.svg");
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: 600px;
    /*background-size: cover;*/
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
    opacity: 0.50;   /*surprisingly little effect after z-index applied*/
    z-index: -1;     /*required for scroll-wheel*/
}

.tab-cli .window {
    height: 100%;
    width: 100%;
    padding: 5px;
    overflow-y: auto;
    overflow-x: hidden;
    font-family: monospace;
    color: white;
    box-sizing: border-box;
    -webkit-user-select: text;
}

.tab-cli textarea[name='commands'] {
    -webkit-box-sizing: border-box;
    width: 100%;
    margin-top: 8px;
    height: 22px;
    line-height: 20px;
    padding-left: 5px;
    border-bottom: 1px solid var(--subtleAccent);
    resize: none;
    flex-shrink: 0;
}

.jBox-container textarea#preview {
    background-color: rgba(24, 22, 22, 0.75);
    width: 100%;
    resize: none;
    overflow-y: scroll;
    overflow-x: hidden;
    font-family: monospace;
    color: white;
    padding: 5px;
    margin-bottom: 5px;
}

.tab-cli #content-watermark {
    z-index: 0;
}

.tab-cli .window .wrapper {
    white-space: pre-wrap;
}

.tab-cli .window .error_message {
    color: red;
    font-weight: bold;
}

.tab-cli .save {
    color: white;
}

@media only screen and (max-width: 1055px) , only screen and (max-device-width: 1055px) {

.tab-cli .content_toolbar {
    margin-top: 5px;
}

}


/* AutoComplete */
.cli-textcomplete-dropdown {
    border: 1px solid var(--subtleAccent);
    background-color: white;
    border-radius: 5px;
    max-height: 50%;
    overflow: auto;
}

.cli-textcomplete-dropdown::-webkit-scrollbar {
    width: 6px;
}

.cli-textcomplete-dropdown::-webkit-scrollbar-track {
    background: lightgrey;
    border-radius: 3px;
}

.cli-textcomplete-dropdown::-webkit-scrollbar-thumb {
    background: grey;
    border-radius: 3px;
}

.cli-textcomplete-dropdown li {
    padding: 2px 5px;
}

.cli-textcomplete-dropdown .active {
    background-color: rgb(255, 187, 0);
}

.cli-textcomplete-dropdown {
    list-style: none;
    padding: 0;
    margin: 0;
}

.cli-textcomplete-dropdown a:hover {
    cursor: pointer;
}

.cli-textcomplete-dropdown a {
    font-family: monospace;
}

.cli-textcomplete-dropdown a b {
    font-family: monospace;
    font-weight: bold;
}
/* End AutoComplete */

